--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "12.0.0",
     "@testing-library/user-event": "13.1.9",
     "react": "17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "17.0.2",
     "react-scripts": "4.0.3"
   },
@@ -30,13 +31,13 @@
   },
   "devDependencies": {
     "eslint": "7.30.0",
-    "prettier": "2.3.2",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-prettier": "3.4.0",
     "eslint-config-airbnb": "18.2.1",
+    "eslint-config-prettier": "8.3.0",
     "eslint-plugin-import": "2.23.4",
     "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-react": "7.24.0",
-    "eslint-plugin-react-hooks": "4.2.0"
+    "eslint-plugin-react-hooks": "4.2.0",
+    "prettier": "2.3.2"
   }
 }
