--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
     "@mui/system": "^5.8.2",
     "@mui/x-date-pickers": "^5.0.0-alpha.5",
     "@testing-library/jest-dom": "5.14.1",
-    "@testing-library/react": "12.0.0",
+    "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "13.1.9",
     "moment": "^2.29.3",
     "react": "17.0.2",
