--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,19 @@
     "@testing-library/jest-dom": "5.14.1",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "13.1.9",
+    "@types/jest": "^28.1.1",
+    "@types/material-ui": "^0.21.12",
+    "@types/node": "^17.0.40",
+    "@types/react": "^17.0.45",
+    "@types/react-beautiful-dnd": "^13.1.2",
+    "@types/react-dom": "^18.0.5",
+    "clsx": "^1.1.1",
     "moment": "^2.29.3",
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "17.0.2",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "typescript": "^4.7.3"
   },
   "scripts": {
     "start": "react-scripts start",
