--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@types/react": "^17.0.45",
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^18.0.5",
+    "axios": "^0.27.2",
     "clsx": "^1.1.1",
     "moment": "^2.29.3",
     "react": "17.0.2",
